update product page, profile page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -83,7 +84,7 @@
               <li><a href="#">Thêm bài viết mới</a></li>
             </ul>
           </li>
-          <li><a href="#about">Tài Liệu</a></li>
+          <li><a href="./product.html">Tài Liệu</a></li>
           <li><a href="./blog.html">Bài Đăng</a></li>
           <li><a href="#portfolio">Giỏ hàng</a></li>
           <li class="dropdown">
@@ -179,7 +180,7 @@
         <div class="row gy-4">
           <div class="col-lg-6">
             <h3>Voluptatem dignissimos provident quasi corporis</h3>
-            <img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
+            <img src="assets/img/books/istockphoto-1375877799-612x612.jpg" class="img-fluid rounded-4 mb-4" alt="">
             <p>Ut fugiat ut sunt quia veniam. Voluptate perferendis perspiciatis quod nisi et. Placeat debitis quia recusandae odit et consequatur voluptatem. Dignissimos pariatur consectetur fugiat voluptas ea.</p>
             <p>Temporibus nihil enim deserunt sed ea. Provident sit expedita aut cupiditate nihil vitae quo officia vel. Blanditiis eligendi possimus et in cum. Quidem eos ut sint rem veniam qui. Ut ut repellendus nobis tempore doloribus debitis explicabo similique sit. Accusantium sed ut omnis beatae neque deleniti repellendus.</p>
           </div>
@@ -200,7 +201,7 @@
               </p>
 
               <div class="position-relative mt-4">
-                <img src="assets/img/about-2.jpg" class="img-fluid rounded-4" alt="">
+                <img src="assets/img/books/3d-book-with-blank-blue-cover_107791-17004.png" class="img-fluid rounded-4" alt="">
                 <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
               </div>
             </div>
@@ -231,6 +232,9 @@
                         <img src="./assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
                       </a>
                       <div class="group-btn">
+                        <a href="assets/img/portfolio/app-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><i class="fa-sharp fa-regular fa-eye"></i>
+                          
+                        </a>
                         <a href=""><i class='bx bx-plus'></i></a>
                         <a href=""><i class='bx bxs-edit-alt'></i></a>
                       </div>
@@ -253,6 +257,7 @@
                         <img src="./assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
                       </a>
                       <div class="group-btn">
+                        <a href=""><i class="fa-sharp fa-regular fa-eye"></i></a>
                         <a href=""><i class='bx bx-plus'></i></a>
                         <a href=""><i class='bx bxs-edit-alt'></i></a>
                       </div>
@@ -275,6 +280,97 @@
                         <img src="./assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
                       </a>
                       <div class="group-btn">
+                        <a href=""><i class="fa-sharp fa-regular fa-eye"></i></a>
+                        <a href=""><i class='bx bx-plus'></i></a>
+                        <a href=""><i class='bx bxs-edit-alt'></i></a>
+                      </div>
+                    </div>
+                    <div class="bottom text-center">
+                      <p class="title"><a href="">Simple Way Of Piece Life</a></p>
+                      <p class="author"><span>Kely Marry</span></p>
+                      <p class="price"><span>1000000 VND</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section>
+    <!-- ======= End Product Section ======= -->
+    <!-- ======= Product Section ======= -->
+    <section class="feature testimonials">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-header">
+          <h2>Tài liệu bán chạy nhất</h2>
+          <!-- <p>Voluptatem quibusdam ut ullam perferendis repellat non ut consequuntur est eveniet deleniti fignissimos eos quam</p> -->
+        </div>
+
+        <div class="slides-3 swiper" data-aos="fade-up" data-aos-delay="100">
+          <div class="swiper-wrapper">
+
+            <div class="swiper-slide">
+              <div class="testimonial-wrap">
+                <div class="testimonial-item">
+                  <div class="product-card">
+                    <div class="top">
+                      <a href="">
+                        <img src="./assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
+                      </a>
+                      <div class="group-btn">
+                        <a href="assets/img/portfolio/app-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><i class="fa-sharp fa-regular fa-eye"></i>
+                          
+                        </a>
+                        <a href=""><i class='bx bx-plus'></i></a>
+                        <a href=""><i class='bx bxs-edit-alt'></i></a>
+                      </div>
+                    </div>
+                    <div class="bottom text-center">
+                      <p class="title"><a href="">Simple Way Of Piece Life</a></p>
+                      <p class="author"><span>Kely Marry</span></p>
+                      <p class="price"><span>1000000 VND</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+            <div class="swiper-slide">
+              <div class="testimonial-wrap">
+                <div class="testimonial-item">
+                  <div class="product-card">
+                    <div class="top">
+                      <a href="">
+                        <img src="./assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
+                      </a>
+                      <div class="group-btn">
+                        <a href=""><i class="fa-sharp fa-regular fa-eye"></i></a>
+                        <a href=""><i class='bx bx-plus'></i></a>
+                        <a href=""><i class='bx bxs-edit-alt'></i></a>
+                      </div>
+                    </div>
+                    <div class="bottom text-center">
+                      <p class="title"><a href="">Simple Way Of Piece Life</a></p>
+                      <p class="author"><span>Kely Marry</span></p>
+                      <p class="price"><span>1000000 VND</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+            <div class="swiper-slide">
+              <div class="testimonial-wrap">
+                <div class="testimonial-item">
+                  <div class="product-card">
+                    <div class="top">
+                      <a href="">
+                        <img src="./assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
+                      </a>
+                      <div class="group-btn">
+                        <a href=""><i class="fa-sharp fa-regular fa-eye"></i></a>
                         <a href=""><i class='bx bx-plus'></i></a>
                         <a href=""><i class='bx bxs-edit-alt'></i></a>
                       </div>
