update add post, add product, commission, cart, cost manager page for user (#001)

--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Impact Bootstrap Template - Portfolio Details</title>
+  <title>Impact Bootstrap Template - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -17,6 +17,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,6 +29,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
 
   <!-- =======================================================
   * Template Name: Impact
@@ -35,6 +38,7 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
 </head>
 
 <body>
@@ -117,112 +121,98 @@
 
   <main id="main">
 
-    <!-- ======= Breadcrumbs ======= -->
-    <div class="breadcrumbs">
-      <div class="page-header d-flex align-items-center" style="background-image: url('');">
-        <div class="container position-relative">
-          <div class="row d-flex justify-content-center">
-            <div class="col-lg-6 text-center">
-              <h2>Portfolio Details</h2>
-              <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
-            </div>
+    <!-- ======= About Us Section ======= -->
+    <section id="cart" class="user-cart">
+
+      <div class="container padding-bottom-3x mb-1" data-aos="fade-up">
+          
+          <!-- Shopping Cart-->
+          <div class="table-responsive shopping-cart">
+              <table class="table">
+                  <thead>
+                      <tr>
+                          <th>Tài liệu của bạn</th>
+                          <th class="text-center">Người bán</th>
+                          <th class="text-center">Phí tải</th>
+                          <th class="text-center">Giảm giá</th>
+                          <th class="text-center"><a class="btn btn-sm btn-outline-danger" href="#">Xóa toàn bộ</a></th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr>
+                          <td>
+                              <div class="product-item">
+                                  <a class="product-thumb" href="#"><img src="https://www.bootdey.com/image/220x180/FF0000/000000" alt="Product"></a>
+                                  <div class="product-info">
+                                      <h4 class="product-title"><a href="#">Tài liệu đọc sách A</a></h4>
+                                      <span><em>Tác giả:</em> Yuki Andeser</span>
+                                      <span><em>Loại:</em> Sách</span>
+                                  </div>
+                              </div>
+                          </td>
+                          <td class="text-center text-lg text-medium">
+                            <a href="./profile.html">User 1</a>
+                          </td>
+                          <td class="text-center text-lg text-medium">$43.90</td>
+                          <td class="text-center text-lg text-medium">$18.00</td>
+                          <td class="text-center"><a class="remove-from-cart" href="#" data-toggle="tooltip" title="" data-original-title="Remove item"><i class="fa fa-trash"></i></a></td>
+                      </tr>
+                      <tr>
+                          <td>
+                              <div class="product-item">
+                                  <a class="product-thumb" href="#"><img src="https://www.bootdey.com/image/220x180/5F9EA0/000000" alt="Product"></a>
+                                  <div class="product-info">
+                                      <h4 class="product-title"><a href="#">Daily Fabric Cap</a></h4>
+                                      <span><em>Tác giả:</em> Stephen Hoking</span>
+                                      <span><em>Loại:</em> Audio</span>
+                                  </div>
+                              </div>
+                          </td>
+                          <td class="text-center text-lg text-medium">
+                            <a href="./profile.html">User 2</a>
+                          </td>
+                          <td class="text-center text-lg text-medium">$24.89</td>
+                          <td class="text-center">—</td>
+                          <td class="text-center"><a class="remove-from-cart" href="#" data-toggle="tooltip" title="" data-original-title="Remove item"><i class="fa fa-trash"></i></a></td>
+                      </tr>
+                      <tr>
+                          <td>
+                              <div class="product-item">
+                                  <a class="product-thumb" href="#"><img src="https://www.bootdey.com/image/220x180/9932CC/000000" alt="Product"></a>
+                                  <div class="product-info">
+                                      <h4 class="product-title"><a href="#">Cole Haan Crossbody</a></h4>
+                                      <span><em>Tác giả:</em> D.Luffy</span><span><em>Loại:</em> Video</span>
+                                  </div>
+                              </div>
+                          </td>
+                          <td class="text-center text-lg text-medium">
+                            <a href="./profile.html">User 3</a>
+                          </td>
+                          <td class="text-center text-lg text-medium">$200.00</td>
+                          <td class="text-center">—</td>
+                          <td class="text-center"><a class="remove-from-cart" href="#" data-toggle="tooltip" title="" data-original-title="Remove item"><i class="fa fa-trash"></i></a></td>
+                      </tr>
+                  </tbody>
+              </table>
           </div>
-        </div>
+          <div class="shopping-cart-footer">
+              <div class="column">
+                  <form class="coupon-form" method="post">
+                      <input class="form-control form-control-sm" type="text" placeholder="Coupon code" required="">
+                      <button class="btn btn-submit btn-sm" type="submit">Apply Coupon</button>
+                  </form>
+              </div>
+              <div class="column text-lg">Subtotal: <span class="text-medium">$289.68</span></div>
+          </div>
+          <div class="shopping-cart-footer">
+              <div class="column"><a class="btn btn-outline-secondary" href="./product.html"><i class="icon-arrow-left"></i>&nbsp;Back to Shopping</a></div>
+              <div class="column">
+                <!-- <a class="btn btn-primary" href="#" data-toast="" data-toast-type="success" data-toast-position="topRight" data-toast-icon="icon-circle-check" data-toast-title="Your cart" data-toast-message="is updated successfully!">Update Cart</a> -->
+                <a class="btn btn-success" href="./payment.html">Thanh Toán</a></div>
+          </div>
       </div>
-      <nav>
-        <div class="container">
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfolio Details</li>
-          </ol>
-        </div>
-      </nav>
-    </div><!-- End Breadcrumbs -->
 
-    <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container" data-aos="fade-up">
-
-        <div class="position-relative h-100">
-          <div class="slides-1 portfolio-details-slider swiper">
-            <div class="swiper-wrapper align-items-center">
-
-              <div class="swiper-slide">
-                <img src="assets/img/portfolio/app-1.jpg" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/portfolio/product-1.jpg" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/portfolio/branding-1.jpg" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/portfolio/books-1.jpg" alt="">
-              </div>
-
-            </div>
-            <div class="swiper-pagination"></div>
-          </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-        </div>
-
-        <div class="row justify-content-between gy-4 mt-4">
-
-          <div class="col-lg-8">
-            <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-              <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
-              </p>
-
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <div>
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
-                </div>
-              </div>
-
-              <p>
-                Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-
-              <p>
-                Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
-              </p>
-
-            </div>
-          </div>
-
-          <div class="col-lg-3">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong> <span>Web design</span></li>
-                <li><strong>Client</strong> <span>ASU Company</span></li>
-                <li><strong>Project date</strong> <span>01 March, 2020</span></li>
-                <li><strong>Project URL</strong> <a href="#">www.example.com</a></li>
-                <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
-              </ul>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Portfolio Details Section -->
+    </section><!-- End About Us Section -->
 
   </main><!-- End #main -->
 
@@ -233,9 +223,9 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-info">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span>Impact</span>
+            <span>BookOnline</span>
           </a>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+          <p>Chúng tôi sẽ luôn mang đến chất lượng và trải nghiệm tốt nhất dành cho bạn!</p>
           <div class="social-links d-flex mt-4">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -256,18 +246,14 @@
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
-          <h4>Our Services</h4>
+          <h4>Các dịch vụ khác</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="#">Khác</a></li>
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-          <h4>Contact Us</h4>
+          <h4>Liên hệ</h4>
           <p>
             A108 Adam Street <br>
             New York, NY 535022<br>
