--- a/add_product.html
+++ b/add_product.html
@@ -20,10 +20,10 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
@@ -40,17 +40,6 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  <style>
-    .profile-head {
-    transform: translateY(5rem)
-}
-
-.cover {
-    background-image: url(https://images.unsplash.com/photo-1530305408560-82d13781b33a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80);
-    background-size: cover;
-    background-repeat: no-repeat
-}
-  </style>
 </head>
 
 <body>
@@ -131,68 +120,82 @@
         </div>
     </header><!-- End Header -->
     <!-- End Header -->
-    <div class="row py-5 px-4 m-0">
-        <div class="col-md-5 mx-auto"> <!-- Profile widget -->
-            <div class="bg-white shadow rounded overflow-hidden">
-                <div class="px-4 pt-0 pb-4 cover">
-                    <div class="media align-items-end profile-head">
-                        <div class="profile mr-3"><img
-                                src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80"
-                                alt="..." width="130" class="rounded mb-2 img-thumbnail"><a href="#"
-                                class="btn btn-outline-dark btn-sm btn-block">Edit profile</a></div>
-                        <div class="media-body mb-5 text-white">
-                            <h4 class="mt-0 mb-0">Mark Williams</h4>
-                            <p class="small mb-4"> <i class="fas fa-map-marker-alt mr-2"></i>New York</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-light p-4 d-flex justify-content-end text-center">
-                    <ul class="list-inline mb-0">
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">215</h5><small class="text-muted"> <i
-                                    class="fas fa-image mr-1"></i>Photos</small>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">745</h5><small class="text-muted"> <i
-                                    class="fas fa-user mr-1"></i>Followers</small>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">340</h5><small class="text-muted"> <i
-                                    class="fas fa-user mr-1"></i>Following</small>
-                        </li>
-                    </ul>
-                </div>
-                <div class="px-4 py-3">
-                    <h5 class="mb-0">About</h5>
-                    <div class="p-4 rounded shadow-sm bg-light">
-                        <p class="font-italic mb-0">Web Developer</p>
-                        <p class="font-italic mb-0">Lives in New York</p>
-                        <p class="font-italic mb-0">Photographer</p>
-                    </div>
-                </div>
-                <div class="py-4 px-4">
-                    <div class="d-flex align-items-center justify-content-between mb-3">
-                        <h5 class="mb-0">Recent photos</h5><a href="#" class="btn btn-link text-muted">Show all</a>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 mb-2 pr-lg-1"><img
-                                src="https://images.unsplash.com/photo-1469594292607-7bd90f8d3ba4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 mb-2 pl-lg-1"><img
-                                src="https://images.unsplash.com/photo-1493571716545-b559a19edd14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 pr-lg-1 mb-2"><img
-                                src="https://images.unsplash.com/photo-1453791052107-5c843da62d97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 pl-lg-1"><img
-                                src="https://images.unsplash.com/photo-1475724017904-b712052c192a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
+
+    <main id="main">
+
+        <!-- ======= About Us Section ======= -->
+        <section id="create-product" class="create-product">
+            <div class="container" data-aos="fade-up">
+                <div class="heading text-center mb-4">
+                    <h1><b>Đăng tài liệu mới</b></h1>
+                </div>
+                <form action="./product.html" method="post">
+                    <div class="row group-add">
+                        <div class="col-lg-3 col-md-1 col-1"></div>
+
+                        <div class="col-lg-6 col-md-10 col-10">
+                            <div class="form-group">
+                                <label for="">Tên tài liệu:</label>
+                                <input type="text" placeholder="Tên tài liệu">
+                            </div>
+                            <div class="form-group">
+                                <label for="">Tên tác giả:</label>
+                                <input type="text" placeholder="Tên tác giả">
+                            </div>
+                            <div class="form-group">
+                                <label for="">File tài liệu:</label>
+                                <input type="file">
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6 col-md-12 col-12">
+                                    <div class="form-group">
+                                        <label for="">Loại tài liệu:</label>
+                                        <select name="">
+                                            <option value="">Sách</option>
+                                            <option value="">Video</option>
+                                            <option value="">Audio</option>
+                                            <option value="">Khác</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-md-12 col-12">
+                                    <div class="form-group">
+                                        <label for="">Chọn thuộc tính:</label>
+                                        <select name="">
+                                            <option value="">Chỉ xem</option>
+                                            <option value="">Xem và tải miễn phí</option>
+                                            <option value="">Xem và tải có phí</option>
+                                            <option value="">Khác</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4 col-md-6 col-12">
+                                    <div class="form-group">
+                                        <label for="">Phí tải về:</label>
+                                        <input type="number">
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 col-md-6 col-12">
+                                    <div class="form-group">
+                                        <label for="">Mô tả:</label>
+                                        <textarea name="description" placeholder="Mô tả"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-submit float-end">Thêm mới</button>
+                        </div>
+
+                        <div class="col-lg-3 col-md-1 col-1"></div>
+                    </div>
+                </form>
+        </section><!-- End About Us Section -->
+        </div>
+
+
+    </main><!-- End #main -->
 
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
@@ -267,7 +270,6 @@
     <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
