--- a/blog.html
+++ b/blog.html
@@ -59,18 +59,19 @@
   <header id="header" class="header d-flex align-items-center">
 
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Impact<span>.</span></h1>
-      </a>
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a href="./index.html">Trang Chủ</a></li>
-          <li class="dropdown"><a href="#"><span>Chức Năng</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+        <a href="index.html" class="logo d-flex align-items-center">
+            <!-- Uncomment the line below if you also wish to use an image logo -->
+            <!-- <img src="assets/img/logo.png" alt=""> -->
+            <h1>Book<span>.</span>Online</h1>
+        </a>
+        <nav id="navbar" class="navbar">
             <ul>
-              <li><a href="#">Thêm Tài Liệu Mới</a></li>
-              <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                <li><a href="./index.html">Trang Chủ</a></li>
+                <li class="dropdown"><a href="#"><span>Chức Năng</span> <i
+                            class="bi bi-chevron-down dropdown-indicator"></i></a>
+                    <ul>
+                        <li><a href="./add_product.html">Thêm Tài Liệu Mới</a></li>
+                        <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul class="dropdown-menu-left dropdown-left">
                   <li><a class="dropdown-item" href="#">Deep Drop Down 1</a></li>
                   <li><a class="dropdown-item" href="#">Deep Drop Down 2</a></li>
@@ -79,31 +80,40 @@
                   <li><a class="dropdown-item" href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li> -->
-              <li><a href="#">Thêm bài viết mới</a></li>
+                        <li><a href="./add_blog.html">Thêm bài viết mới</a></li>
+                    </ul>
+                </li>
+                <li><a href="./product.html">Tài Liệu</a></li>
+                <li><a href="./blog.html">Bài Đăng</a></li>
+                <li><a href="./cart.html">Giỏ hàng</a></li>
+                <li class="dropdown">
+                    <a href="#" class="group-user">
+                        <!-- <span> -->
+                        <div>
+                            <img src="./assets/img/team/team-1.jpg" alt="">
+                            <span>Divid</span>
+                        </div>
+                        <i class="bi bi-chevron-down dropdown-indicator"></i>
+                        <!-- </span>  -->
+                    </a>
+                    <ul>
+                        <li><a href="./profile.html">Profile</a></li>
+                        <li><a href="./blog.html">Bài đăng</a></li>
+                        <li><a href="./product.html">Tài liệu</a></li>
+                        <li><a href="./refer_code.html">Mã giới thiệu</a></li>
+                        <li><a href="./commission-policy.html">Chính sách hoa hồng</a></li>
+                        <li><a href="./manager-cost.html">Quản lý tài chính</a></li>
+                        <li><a href="./login.html">Đăng xuất</a></li>
+                    </ul>
+                </li>
             </ul>
-          </li>
-          <li><a href="#about">Tài Liệu</a></li>
-          <li><a href="./blog.html">Bài Đăng</a></li>
-          <li><a href="#portfolio">Giỏ hàng</a></li>
-          <li class="dropdown">
-              <span class="group-user">
-                <img src="./assets/img/team/team-1.jpg" alt="">
-                <p class="name"><a><span>Divid</span></a></p>
-              </span> 
-            
-            <ul>
-              <li><a href="./profile.html">Profile</a></li>
-              <li><a href="">Đăng xuất</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav><!-- .navbar -->
+        </nav><!-- .navbar -->
 
-      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+        <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+        <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
 
     </div>
-  </header><!-- End Header -->
+</header><!-- End Header -->
   <!-- End Header -->
 
   <main id="main">
