--- a/commission-policy.html
+++ b/commission-policy.html
@@ -1,3 +1,4 @@
+<!--phải chọn từng service và staff đc thôi chị nên ko quay lại chọn service nữa đâu-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,10 +21,10 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
@@ -40,17 +41,6 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  <style>
-    .profile-head {
-    transform: translateY(5rem)
-}
-
-.cover {
-    background-image: url(https://images.unsplash.com/photo-1530305408560-82d13781b33a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80);
-    background-size: cover;
-    background-repeat: no-repeat
-}
-  </style>
 </head>
 
 <body>
@@ -131,68 +121,42 @@
         </div>
     </header><!-- End Header -->
     <!-- End Header -->
-    <div class="row py-5 px-4 m-0">
-        <div class="col-md-5 mx-auto"> <!-- Profile widget -->
-            <div class="bg-white shadow rounded overflow-hidden">
-                <div class="px-4 pt-0 pb-4 cover">
-                    <div class="media align-items-end profile-head">
-                        <div class="profile mr-3"><img
-                                src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80"
-                                alt="..." width="130" class="rounded mb-2 img-thumbnail"><a href="#"
-                                class="btn btn-outline-dark btn-sm btn-block">Edit profile</a></div>
-                        <div class="media-body mb-5 text-white">
-                            <h4 class="mt-0 mb-0">Mark Williams</h4>
-                            <p class="small mb-4"> <i class="fas fa-map-marker-alt mr-2"></i>New York</p>
+
+    <main id="main">
+
+        <!-- ======= About Us Section ======= -->
+        <section id="commission" class="commission">
+            <div class="container" data-aos="fade-up">
+
+                <div class="section-header">
+                    <h2>Chính sách hoa hồng</h2>
+                    <p>Chính sách hoa hồng cho phép xem phần trăm hoa hồng hiện tại của bản thân.</p>
+                </div>
+
+                <div class="row gy-4" style="background: #fff;">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="h3 text-uppercase pt-md-4" id="offer">Phần trăm hoa hồng hiện tại của bạn là: <b>10%</b></div>
+                        <div id="offer-description">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In repellat eius, voluptatibus nam iste itaque fuga necessitatibus culpa laudantium quibusdam consectetur veritatis minus inventore ipsam hic expedita impedit, dignissimos eum!</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime commodi dolor nam sapiente similique voluptate odit! Necessitatibus, iure! Earum, sit nesciunt! Facilis architecto repellendus suscipit doloribus! Sunt totam natus vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt aut tempore totam doloremque enim praesentium sed explicabo nisi a quidem! Accusantium ratione odit tenetur corporis veritatis beatae dolorum id voluptates?</p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur officia placeat et perspiciatis ratione rem vel laudantium quas illum dicta ad, harum laborum beatae consequatur modi nam, minus libero magni?
+                            Libero porro enim facere veniam dignissimos, eligendi obcaecati adipisci eum, et debitis voluptatum dolorem quasi iste atque doloribus! Non maiores reiciendis delectus mollitia repudiandae nihil nobis aut nam modi hic.
+                            Velit possimus deleniti, perspiciatis cumque totam quae ullam nisi accusantium debitis molestiae similique porro alias facilis, dolor voluptatum officiis sunt, soluta beatae id quas sapiente modi repudiandae dolorum! Ipsa, esse?
+                            Sequi et alias voluptatum repellat distinctio deserunt eius in libero molestias similique? Voluptate quibusdam labore amet repudiandae, quidem nostrum iure sapiente repellendus enim nemo ex voluptatum quas provident necessitatibus laborum.
+                            Aliquam officia laboriosam dolorum magni excepturi, ipsa sint odit. Ducimus delectus a porro, facere beatae culpa laudantium possimus soluta accusantium ad? Pariatur ratione expedita, temporibus necessitatibus ex fugiat porro reiciendis!
+                            Reprehenderit eligendi nobis magni dolor aliquam nisi vero dicta aperiam error voluptate accusantium quisquam quibusdam vitae vel nulla iste necessitatibus cum ducimus cupiditate, inventore earum culpa qui. Aspernatur, molestiae harum.
+                            Sint, rerum mollitia? Enim, excepturi sapiente. Quod maiores dolorem, in ad nulla quos natus odio. Ad omnis praesentium corrupti placeat, modi asperiores blanditiis assumenda dolores possimus deleniti cumque, nam nesciunt?
+                            Eum asperiores, odio ut, nisi optio quo in molestias sint ipsa autem obcaecati? Ab, aspernatur molestias. Minus veritatis saepe exercitationem vel nobis laboriosam quisquam velit sit ratione, incidunt quibusdam iure.
+                            Optio adipisci, doloribus corporis saepe praesentium amet quis unde asperiores officiis voluptas, a incidunt sunt, soluta nemo non corrupti aperiam facilis quasi vel sint minima ut quo. Blanditiis, illum explicabo!
+                            Cupiditate, laboriosam accusantium aspernatur laborum maiores non officiis. Molestias officiis aliquid rerum molestiae? Harum sit vitae delectus quidem itaque doloremque, perferendis voluptate sapiente ea? Vitae perspiciatis at hic soluta nostrum.
                         </div>
                     </div>
                 </div>
-                <div class="bg-light p-4 d-flex justify-content-end text-center">
-                    <ul class="list-inline mb-0">
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">215</h5><small class="text-muted"> <i
-                                    class="fas fa-image mr-1"></i>Photos</small>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">745</h5><small class="text-muted"> <i
-                                    class="fas fa-user mr-1"></i>Followers</small>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">340</h5><small class="text-muted"> <i
-                                    class="fas fa-user mr-1"></i>Following</small>
-                        </li>
-                    </ul>
-                </div>
-                <div class="px-4 py-3">
-                    <h5 class="mb-0">About</h5>
-                    <div class="p-4 rounded shadow-sm bg-light">
-                        <p class="font-italic mb-0">Web Developer</p>
-                        <p class="font-italic mb-0">Lives in New York</p>
-                        <p class="font-italic mb-0">Photographer</p>
-                    </div>
-                </div>
-                <div class="py-4 px-4">
-                    <div class="d-flex align-items-center justify-content-between mb-3">
-                        <h5 class="mb-0">Recent photos</h5><a href="#" class="btn btn-link text-muted">Show all</a>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 mb-2 pr-lg-1"><img
-                                src="https://images.unsplash.com/photo-1469594292607-7bd90f8d3ba4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 mb-2 pl-lg-1"><img
-                                src="https://images.unsplash.com/photo-1493571716545-b559a19edd14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 pr-lg-1 mb-2"><img
-                                src="https://images.unsplash.com/photo-1453791052107-5c843da62d97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 pl-lg-1"><img
-                                src="https://images.unsplash.com/photo-1475724017904-b712052c192a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
+            </div>
+        </section><!-- End About Us Section -->
+
+    </main><!-- End #main -->
 
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
@@ -267,7 +231,6 @@
     <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
