--- a/manager-cost.html
+++ b/manager-cost.html
@@ -20,18 +20,27 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/dataTables.bootstrap4.min.css">
 
     <!-- Template Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <style>
+        #chart {
+        max-width: 100%;
+        width: 100%;
+        margin: 35px auto;
+        }
+
+    </style>
 
     <!-- =======================================================
   * Template Name: Impact
@@ -40,17 +49,6 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  <style>
-    .profile-head {
-    transform: translateY(5rem)
-}
-
-.cover {
-    background-image: url(https://images.unsplash.com/photo-1530305408560-82d13781b33a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80);
-    background-size: cover;
-    background-repeat: no-repeat
-}
-  </style>
 </head>
 
 <body>
@@ -131,68 +129,152 @@
         </div>
     </header><!-- End Header -->
     <!-- End Header -->
-    <div class="row py-5 px-4 m-0">
-        <div class="col-md-5 mx-auto"> <!-- Profile widget -->
-            <div class="bg-white shadow rounded overflow-hidden">
-                <div class="px-4 pt-0 pb-4 cover">
-                    <div class="media align-items-end profile-head">
-                        <div class="profile mr-3"><img
-                                src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80"
-                                alt="..." width="130" class="rounded mb-2 img-thumbnail"><a href="#"
-                                class="btn btn-outline-dark btn-sm btn-block">Edit profile</a></div>
-                        <div class="media-body mb-5 text-white">
-                            <h4 class="mt-0 mb-0">Mark Williams</h4>
-                            <p class="small mb-4"> <i class="fas fa-map-marker-alt mr-2"></i>New York</p>
+
+    <main id="main">
+
+        <!-- ======= About Us Section ======= -->
+        <section id="cost-manager" class="cost-manager">
+            <div class="container" data-aos="fade-up">
+
+                <div class="section-header p-0">
+                    <h2>Quản lý tài chính bản thân</h2>
+                </div>
+                <div class="group-cost">
+                    <a href="" class="btn btn-manager">Nạp tiền</a>
+                    <a href="" class="btn btn-manager">Rút tiền</a>
+                </div>
+
+                <div class="row gy-4">
+                    <div class="col-lg-8 col-md-12 col-12">
+                        <div id="chart">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-12 col-12">
+                        <table class="table text-center">
+                            <thead>
+                                <tr>
+                                    <th>STT</th>
+                                    <th>Tháng</th>
+                                    <th>Tổng thu nhập</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>2.090.000</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>1</td>
+                                    <td>2.090.000</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>1</td>
+                                    <td>2.090.000</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>1</td>
+                                    <td>2.090.000</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>1</td>
+                                    <td>2.090.000</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>1</td>
+                                    <td>2.090.000</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="table-responsive">
+                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                <thead>
+                                    <tr>
+                                        <th>Stt</th>
+                                        <th>Tên tài liệu</th>
+                                        <th>Hình minh họa</th>
+                                        <th>Người mua</th>
+                                        <th>Số iền</th>
+                                        <th>Ngày mua</th>
+                                        <th>Chức năng</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Tài liệu video 1</td>
+                                            <td>
+                                                <img src="./assets/img/portfolio/books-1.jpg" width="200px" alt="">
+                                            </td>
+                                            <td>Nguyen Van A</td>
+                                            <td>1.090.000</td>
+                                            <td>12/2/2023</td>
+                                            <td>
+                                                <a href="" class="icon edit"><i class='bx bx-edit'></i></a>
+                                                <a href="" class="icon delete"><i class='bx bxs-message-square-x' ></i></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Tài liệu video 1</td>
+                                            <td>
+                                                <img src="./assets/img/portfolio/books-2.jpg" width="200px" alt="">
+                                            </td>
+                                            <td>Nguyen Van A</td>
+                                            <td>1.090.000</td>
+                                            <td>12/2/2023</td>
+                                            <td>
+                                                <a href="" class="icon edit"><i class='bx bx-edit'></i></a>
+                                                <a href="" class="icon delete"><i class='bx bxs-message-square-x' ></i></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Tài liệu video 1</td>
+                                            <td>
+                                                <img src="./assets/img/portfolio/books-3.jpg" width="200px" alt="">
+                                            </td>
+                                            <td>Nguyen Van A</td>
+                                            <td>1.090.000</td>
+                                            <td>12/2/2023</td>
+                                            <td>
+                                                <a href="" class="icon edit"><i class='bx bx-edit'></i></a>
+                                                <a href="" class="icon delete"><i class='bx bxs-message-square-x' ></i></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Tài liệu video 1</td>
+                                            <td>
+                                                <img src="./assets/img/portfolio/books-1.jpg" width="200px" alt="">
+                                            </td>
+                                            <td>Nguyen Van A</td>
+                                            <td>1.090.000</td>
+                                            <td>12/2/2023</td>
+                                            <td>
+                                                <a href="" class="icon edit"><i class='bx bx-edit'></i></a>
+                                                <a href="" class="icon delete"><i class='bx bxs-message-square-x' ></i></a>
+                                            </td>
+                                        </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
-                <div class="bg-light p-4 d-flex justify-content-end text-center">
-                    <ul class="list-inline mb-0">
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">215</h5><small class="text-muted"> <i
-                                    class="fas fa-image mr-1"></i>Photos</small>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">745</h5><small class="text-muted"> <i
-                                    class="fas fa-user mr-1"></i>Followers</small>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">340</h5><small class="text-muted"> <i
-                                    class="fas fa-user mr-1"></i>Following</small>
-                        </li>
-                    </ul>
-                </div>
-                <div class="px-4 py-3">
-                    <h5 class="mb-0">About</h5>
-                    <div class="p-4 rounded shadow-sm bg-light">
-                        <p class="font-italic mb-0">Web Developer</p>
-                        <p class="font-italic mb-0">Lives in New York</p>
-                        <p class="font-italic mb-0">Photographer</p>
-                    </div>
-                </div>
-                <div class="py-4 px-4">
-                    <div class="d-flex align-items-center justify-content-between mb-3">
-                        <h5 class="mb-0">Recent photos</h5><a href="#" class="btn btn-link text-muted">Show all</a>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 mb-2 pr-lg-1"><img
-                                src="https://images.unsplash.com/photo-1469594292607-7bd90f8d3ba4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 mb-2 pl-lg-1"><img
-                                src="https://images.unsplash.com/photo-1493571716545-b559a19edd14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 pr-lg-1 mb-2"><img
-                                src="https://images.unsplash.com/photo-1453791052107-5c843da62d97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 pl-lg-1"><img
-                                src="https://images.unsplash.com/photo-1475724017904-b712052c192a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
+            </div>
+        </section><!-- End About Us Section -->
+
+    </main><!-- End #main -->
 
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
@@ -267,7 +349,7 @@
     <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -276,8 +358,18 @@
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
 
+        <!--New-->
+        <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+        <script src="./assets/js/chart.js"></script>
+    
+        <!-- Vendor JS datatable -->
+        <script src="./assets/js/jquery.dataTables.min.js"></script>
+        <script src="./assets/js/dataTables.bootstrap4.min.js"></script>
+
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script src="./assets/js/script.js"></script>
+
 
 </body>
 
