--- a/product-detail.html
+++ b/product-detail.html
@@ -75,31 +75,40 @@
                     <li class="dropdown"><a href="#"><span>Chức Năng</span> <i
                                 class="bi bi-chevron-down dropdown-indicator"></i></a>
                         <ul>
-                            <li><a href="#">Thêm Tài Liệu Mới</a></li>
+                            <li><a href="./add_product.html">Thêm Tài Liệu Mới</a></li>
                             <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul class="dropdown-menu-left dropdown-left">
-                  <li><a class="dropdown-item" href="#">Deep Drop Down 1</a></li>
-                  <li><a class="dropdown-item" href="#">Deep Drop Down 2</a></li>
-                  <li><a class="dropdown-item" href="#">Deep Drop Down 3</a></li>
-                  <li><a class="dropdown-item" href="#">Deep Drop Down 4</a></li>
-                  <li><a class="dropdown-item" href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
-                            <li><a href="#">Thêm bài viết mới</a></li>
+                    <ul class="dropdown-menu-left dropdown-left">
+                      <li><a class="dropdown-item" href="#">Deep Drop Down 1</a></li>
+                      <li><a class="dropdown-item" href="#">Deep Drop Down 2</a></li>
+                      <li><a class="dropdown-item" href="#">Deep Drop Down 3</a></li>
+                      <li><a class="dropdown-item" href="#">Deep Drop Down 4</a></li>
+                      <li><a class="dropdown-item" href="#">Deep Drop Down 5</a></li>
+                    </ul>
+                  </li> -->
+                            <li><a href="./add_blog.html">Thêm bài viết mới</a></li>
                         </ul>
                     </li>
-                    <li><a href="#about">Tài Liệu</a></li>
+                    <li><a href="./product.html">Tài Liệu</a></li>
                     <li><a href="./blog.html">Bài Đăng</a></li>
-                    <li><a href="#portfolio">Giỏ hàng</a></li>
+                    <li><a href="./cart.html">Giỏ hàng</a></li>
                     <li class="dropdown">
-                        <span class="group-user">
-                            <img src="./assets/img/team/team-1.jpg" alt="">
-                            <p class="name"><a><span>Divid</span></a></p>
-                        </span>
-
+                        <a href="#" class="group-user">
+                            <!-- <span> -->
+                            <div>
+                                <img src="./assets/img/team/team-1.jpg" alt="">
+                                <span>Divid</span>
+                            </div>
+                            <i class="bi bi-chevron-down dropdown-indicator"></i>
+                            <!-- </span>  -->
+                        </a>
                         <ul>
                             <li><a href="./profile.html">Profile</a></li>
-                            <li><a href="">Đăng xuất</a></li>
+                            <li><a href="./blog.html">Bài đăng</a></li>
+                            <li><a href="./product.html">Tài liệu</a></li>
+                            <li><a href="./refer_code.html">Mã giới thiệu</a></li>
+                            <li><a href="./commission-policy.html">Chính sách hoa hồng</a></li>
+                            <li><a href="./manager-cost.html">Quản lý tài chính</a></li>
+                            <li><a href="./login.html">Đăng xuất</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -181,13 +190,13 @@
                                     quidem at sequi ipsa!</p>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, perferendis
                                     eius. Dignissimos, labore suscipit. Unde.</p>
-                                <ul>
+                                <!-- <ul>
                                     <li>Color: <span>Black</span></li>
                                     <li>Available: <span>in stock</span></li>
                                     <li>Category: <span>Shoes</span></li>
                                     <li>Shipping Area: <span>All over the world</span></li>
                                     <li>Shipping Fee: <span>Free</span></li>
-                                </ul>
+                                </ul> -->
                             </div>
 
                             <div class="purchase-info">
@@ -257,7 +266,7 @@
                                                     data-user=""
                                                     class="comment-box ml-2">
                                                         <h4>Thêm bình luận mới</h4>
-                                                        <p style="color: red;font-size: .9rem;"></p><p style='color: red;font-size: .9rem;'>$session</p>
+                                                        <p style="color: red;font-size: .9rem;"></p><p style='color: red;font-size: .9rem;'></p>
                                                         <div class="rating">
                                                             <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label>
                                                             <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label>
