--- a/product.html
+++ b/product.html
@@ -75,22 +75,40 @@
                     <li class="dropdown"><a href="#"><span>Chức Năng</span> <i
                                 class="bi bi-chevron-down dropdown-indicator"></i></a>
                         <ul>
-                            <li><a href="#">Thêm Tài Liệu Mới</a></li>
-                            <li><a href="#">Thêm bài viết mới</a></li>
+                            <li><a href="./add_product.html">Thêm Tài Liệu Mới</a></li>
+                            <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                    <ul class="dropdown-menu-left dropdown-left">
+                      <li><a class="dropdown-item" href="#">Deep Drop Down 1</a></li>
+                      <li><a class="dropdown-item" href="#">Deep Drop Down 2</a></li>
+                      <li><a class="dropdown-item" href="#">Deep Drop Down 3</a></li>
+                      <li><a class="dropdown-item" href="#">Deep Drop Down 4</a></li>
+                      <li><a class="dropdown-item" href="#">Deep Drop Down 5</a></li>
+                    </ul>
+                  </li> -->
+                            <li><a href="./add_blog.html">Thêm bài viết mới</a></li>
                         </ul>
                     </li>
-                    <li><a href="#about">Tài Liệu</a></li>
+                    <li><a href="./product.html">Tài Liệu</a></li>
                     <li><a href="./blog.html">Bài Đăng</a></li>
-                    <li><a href="#portfolio">Giỏ hàng</a></li>
+                    <li><a href="./cart.html">Giỏ hàng</a></li>
                     <li class="dropdown">
-                        <span class="group-user">
-                            <img src="./assets/img/team/team-1.jpg" alt="">
-                            <p class="name"><a><span>Divid</span></a></p>
-                        </span>
-
+                        <a href="#" class="group-user">
+                            <!-- <span> -->
+                            <div>
+                                <img src="./assets/img/team/team-1.jpg" alt="">
+                                <span>Divid</span>
+                            </div>
+                            <i class="bi bi-chevron-down dropdown-indicator"></i>
+                            <!-- </span>  -->
+                        </a>
                         <ul>
                             <li><a href="./profile.html">Profile</a></li>
-                            <li><a href="">Đăng xuất</a></li>
+                            <li><a href="./blog.html">Bài đăng</a></li>
+                            <li><a href="./product.html">Tài liệu</a></li>
+                            <li><a href="./refer_code.html">Mã giới thiệu</a></li>
+                            <li><a href="./commission-policy.html">Chính sách hoa hồng</a></li>
+                            <li><a href="./manager-cost.html">Quản lý tài chính</a></li>
+                            <li><a href="./login.html">Đăng xuất</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -118,10 +136,6 @@
                             <div class="product__photo">
                                 <div class="photo-container">
                                     <div class="photo-main">
-                                        <!-- <div class="controls">
-                                            <i class="material-icons"></i>
-                                            <i class="material-icons"></i>
-                                        </div> -->
                                         <img src="./assets/img/portfolio/books-2.jpg">
                                     </div>
                                 </div>
@@ -146,10 +160,10 @@
                                     <div class="owner mb-2">
                                         <img src="./assets/img/team/team-2.jpg" alt="">
                                         <div class="name">Jony Dev </div>
-                                        <a href="assets/img/portfolio/books-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><i class="fa-sharp fa-regular fa-eye"></i> </a>
+                                        <a href="./product-detail.html"><i class="fa-sharp fa-regular fa-eye"></i> </a>
                                     </div>
                                 </div>
-                                <button class="buy--btn">ADD TO CART</button>
+                                <a href="./cart.html" class="buy--btn">ADD TO CART</a>
                             </div>
                         </div>
                     </div>
@@ -186,10 +200,10 @@
                                     <div class="owner mb-2">
                                         <img src="./assets/img/team/team-1.jpg" alt="">
                                         <div class="name">Jony Dev </div>
-                                        <a href="assets/img/portfolio/books-3.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><i class="fa-sharp fa-regular fa-eye"></i> </a>
+                                        <a href="./product-detail.html"><i class="fa-sharp fa-regular fa-eye"></i> </a>
                                     </div>
                                 </div>
-                                <button class="buy--btn">ADD TO CART</button>
+                                <a href="./cart.html" class="buy--btn">ADD TO CART</a>
                             </div>
                         </div>
                     </div>
@@ -226,10 +240,10 @@
                                     <div class="owner mb-2">
                                         <img src="./assets/img/team/team-3.jpg" alt="">
                                         <div class="name">Jony Dev </div>
-                                        <a href="assets/img/portfolio/books-3.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><i class="fa-sharp fa-regular fa-eye"></i> </a>
+                                        <a href="./product-detail.html"><i class="fa-sharp fa-regular fa-eye"></i> </a>
                                     </div>
                                 </div>
-                                <button class="buy--btn">ADD TO CART</button>
+                                <a href="./cart.html" class="buy--btn">ADD TO CART</a>
                             </div>
                         </div>
                     </div>
@@ -266,10 +280,10 @@
                                     <div class="owner mb-2">
                                         <img src="./assets/img/team/team-1.jpg" alt="">
                                         <div class="name">Jony Dev </div>
-                                        <a href="assets/img/portfolio/books-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><i class="fa-sharp fa-regular fa-eye"></i> </a>
+                                        <a href="./product-detail.html"><i class="fa-sharp fa-regular fa-eye"></i> </a>
                                     </div>
                                 </div>
-                                <button class="buy--btn">ADD TO CART</button>
+                                <a href="./cart.html" class="buy--btn">ADD TO CART</a>
                             </div>
                         </div>
                     </div>
@@ -306,10 +320,10 @@
                                     <div class="owner mb-2">
                                         <img src="./assets/img/team/team-2.jpg" alt="">
                                         <div class="name">Jony Dev </div>
-                                        <a href="assets/img/portfolio/books-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><i class="fa-sharp fa-regular fa-eye"></i> </a>
+                                        <a href="./product-detail.html"><i class="fa-sharp fa-regular fa-eye"></i> </a>
                                     </div>
                                 </div>
-                                <button class="buy--btn">ADD TO CART</button>
+                                <a href="./cart.html" class="buy--btn">ADD TO CART</a>
                             </div>
                         </div>
                     </div>
@@ -346,10 +360,10 @@
                                     <div class="owner mb-2">
                                         <img src="./assets/img/team/team-1.jpg" alt="">
                                         <div class="name">Jony Dev </div>
-                                        <a href="assets/img/portfolio/books-3.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><i class="fa-sharp fa-regular fa-eye"></i> </a>
+                                        <a href="./product-detail.html"><i class="fa-sharp fa-regular fa-eye"></i> </a>
                                     </div>
                                 </div>
-                                <button class="buy--btn">ADD TO CART</button>
+                                <a href="./cart.html" class="buy--btn">ADD TO CART</a>
                             </div>
                         </div>
                     </div>
@@ -386,10 +400,10 @@
                                     <div class="owner mb-2">
                                         <img src="./assets/img/team/team-3.jpg" alt="">
                                         <div class="name">Jony Dev </div>
-                                        <a href="assets/img/portfolio/books-3.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><i class="fa-sharp fa-regular fa-eye"></i> </a>
+                                        <a href="./product-detail.html"><i class="fa-sharp fa-regular fa-eye"></i> </a>
                                     </div>
                                 </div>
-                                <button class="buy--btn">ADD TO CART</button>
+                                <a href="./cart.html" class="buy--btn">ADD TO CART</a>
                             </div>
                         </div>
                     </div>
@@ -426,10 +440,10 @@
                                     <div class="owner mb-2">
                                         <img src="./assets/img/team/team-1.jpg" alt="">
                                         <div class="name">Jony Dev </div>
-                                        <a href="assets/img/portfolio/books-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><i class="fa-sharp fa-regular fa-eye"></i> </a>
+                                        <a href="./product-detail.html"><i class="fa-sharp fa-regular fa-eye"></i> </a>
                                     </div>
                                 </div>
-                                <button class="buy--btn">ADD TO CART</button>
+                                <a href="./cart.html" class="buy--btn">ADD TO CART</a>
                             </div>
                         </div>
                     </div>
