--- a/refer_code.html
+++ b/refer_code.html
@@ -1,3 +1,4 @@
+<!--phải chọn từng service và staff đc thôi chị nên ko quay lại chọn service nữa đâu-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,10 +21,10 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
@@ -40,17 +41,6 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  <style>
-    .profile-head {
-    transform: translateY(5rem)
-}
-
-.cover {
-    background-image: url(https://images.unsplash.com/photo-1530305408560-82d13781b33a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80);
-    background-size: cover;
-    background-repeat: no-repeat
-}
-  </style>
 </head>
 
 <body>
@@ -131,68 +121,60 @@
         </div>
     </header><!-- End Header -->
     <!-- End Header -->
-    <div class="row py-5 px-4 m-0">
-        <div class="col-md-5 mx-auto"> <!-- Profile widget -->
-            <div class="bg-white shadow rounded overflow-hidden">
-                <div class="px-4 pt-0 pb-4 cover">
-                    <div class="media align-items-end profile-head">
-                        <div class="profile mr-3"><img
-                                src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80"
-                                alt="..." width="130" class="rounded mb-2 img-thumbnail"><a href="#"
-                                class="btn btn-outline-dark btn-sm btn-block">Edit profile</a></div>
-                        <div class="media-body mb-5 text-white">
-                            <h4 class="mt-0 mb-0">Mark Williams</h4>
-                            <p class="small mb-4"> <i class="fas fa-map-marker-alt mr-2"></i>New York</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-light p-4 d-flex justify-content-end text-center">
-                    <ul class="list-inline mb-0">
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">215</h5><small class="text-muted"> <i
-                                    class="fas fa-image mr-1"></i>Photos</small>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">745</h5><small class="text-muted"> <i
-                                    class="fas fa-user mr-1"></i>Followers</small>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">340</h5><small class="text-muted"> <i
-                                    class="fas fa-user mr-1"></i>Following</small>
-                        </li>
-                    </ul>
-                </div>
-                <div class="px-4 py-3">
-                    <h5 class="mb-0">About</h5>
-                    <div class="p-4 rounded shadow-sm bg-light">
-                        <p class="font-italic mb-0">Web Developer</p>
-                        <p class="font-italic mb-0">Lives in New York</p>
-                        <p class="font-italic mb-0">Photographer</p>
-                    </div>
-                </div>
-                <div class="py-4 px-4">
-                    <div class="d-flex align-items-center justify-content-between mb-3">
-                        <h5 class="mb-0">Recent photos</h5><a href="#" class="btn btn-link text-muted">Show all</a>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 mb-2 pr-lg-1"><img
-                                src="https://images.unsplash.com/photo-1469594292607-7bd90f8d3ba4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 mb-2 pl-lg-1"><img
-                                src="https://images.unsplash.com/photo-1493571716545-b559a19edd14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 pr-lg-1 mb-2"><img
-                                src="https://images.unsplash.com/photo-1453791052107-5c843da62d97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                        <div class="col-lg-6 pl-lg-1"><img
-                                src="https://images.unsplash.com/photo-1475724017904-b712052c192a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                                alt="" class="img-fluid rounded shadow-sm"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
+    <main id="main">
+
+        <!-- ======= About Us Section ======= -->
+        <section id="referral" class="referral">
+            <div class="container" data-aos="fade-up">
+
+                <div class="section-header">
+                    <h2>Mã giới thiệu của bạn</h2>
+                    <p>Tạo mã giới thiệu cho phép bạn sử dụng mã giới thiệu của bản thân để chia sẻ đến mọi người.</p>
+                </div>
+
+                <div class="row gy-4" style="background: #fff;">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="h3 text-uppercase pt-md-4" id="offer">Giảm giá tới 30%</div>
+                        <div id="offer-description">
+                            <p>Sao chép mã phiếu giảm giá</p>
+                            <p>Hãy nhớ dán khi bạn tạo tài khoản</p>
+                            <p>Trực tuyến</p>
+                        </div>
+                        <div class="d-flex flex-row justify-content-center rounded mt-4">
+                            <div class="btn px-xl-5 px-lg-4 px-md-3 px-sm-5 px-4">
+                                <div class="d-flex flex-column">
+                                    <div><span class="fa fa-share-alt fa-2x"></span></div>
+                                    <div class="text-uppercase font-weight-bold">share</div>
+                                </div>
+                            </div>
+                            <div class="btn px-xl-5 px-lg-4 px-md-3 px-sm-5 px-4">
+                                <div class="d-flex flex-column">
+                                    <div><span class="fa fa-envelope-o fa-2x"></span></div>
+                                    <div class="text-uppercase font-weight-bold">mail</div>
+                                </div>
+                            </div>
+                            <div class="btn px-xl-5 px-lg-4 px-md-3 px-sm-5 px-4">
+                                <div class="d-flex flex-column">
+                                    <div><span class="fa fa-star-o fa-2x"></span></div>
+                                    <div class="text-uppercase font-weight-bold">save</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="expiry" class="font-weight-bold">
+                            <div class="px-3">Valid upto</div>
+                            <div class="px-3">September 10</div>
+                        </div>
+                        <div class="border-bottom text-muted pt-5 d-flex justify-content-center">Copy and paste the code
+                        </div>
+                        <div class="d-flex justify-content-center text-uppercase" id="code">alliswell</div>
+                    </div>
+                </div>
+
+            </div>
+        </section><!-- End About Us Section -->
+
+    </main><!-- End #main -->
 
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
@@ -267,7 +249,6 @@
     <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
